# flowmesh

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOCAL_TESTING.md  Makefile  OSS project idea.md  PHASE_21_PLAN.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  START_LOCAL.sh  TESTING_WEBSOCKET.md  docker-compose.dev.yml  docker-compose.yml  engine_level_design.md  plane_in_phase.md  test-websocket.sh
.cursor/plans/: flowmesh-phase-breakdown-b332248e.plan.md
.github/workflows/: ci.yml
docker/: Dockerfile  README.md
docs/: API.md  ARCHITECTURE.md  DEPENDENCIES.md  DEPLOYMENT.md  SDK_WEBSOCKET_ANALYSIS.md
engine/: go.mod  go.sum
engine/api/proto/: Makefile  flowmesh.pb.go  flowmesh.proto  flowmesh_grpc.pb.go
scripts/: README-REPLAY-TESTING.md  README-TESTING.md  add-test-jobs.sh  add-test-stream-data.sh  create-consumer-groups.sh  create-queues-docker.sh  create-stream-resources.sh  create-test-replay-sessions.sh  dev-setup.sh  quick-test-replay.sh  test-replay-endpoints.sh  verify.sh
sdk-go/: README.md  client.go  go.mod  go.sum
sdk-go/client/: client.go  client_test.go  errors.go  kv.go  options.go  options_test.go  queue.go  resource.go  stream.go  types.go  types_test.go
sdk-python/: .gitignore  MANIFEST.in  README.md  generate_proto.sh  pyproject.toml  pytest.ini
sdk-python/examples/: kv_example.py  queues_example.py  streams_example.py
sdk-python/tests/: __init__.py  test_client.py  test_exceptions.py  test_types.py  test_utils.py
web-ui/: README.md  package-lock.json  package.json
web-ui/src/: App.tsx
web-ui/src/types/: api.ts
(+197 files in other folders)
